--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="head-l">
-    <h1>james powell mechanical!</h1>
+    <h1>james powell mechanical Shop</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Shop</a></li>
